<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>storm_agimus_bridge</name>
  <version>0.0.0</version>
  <description>
    ROS 2 bridge that wraps STORM MPPI and publishes linear_feedback_controller_msgs/Control (torque LFC policy).
  </description>

  <maintainer email="codex@openai.com">Codex</maintainer>
  <license>BSD-2</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <exec_depend>linear_feedback_controller_msgs</exec_depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
